--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav>
         <ul class="nav-list">
           <li><a href="/">Home</a></li>
-          <li><a href="./src/view/addProduct.html">Agregar producto</a></li>
+          <li><a href="./src/view/addProduct.html">Add product</a></li>
         </ul>
       </nav>
     </header>
